--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@uiw/react-codemirror": "^4.21.21",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "ckeditor5-custom-build": "^0.0.6",
     "date-fns": "^2.30.0",
     "install": "^0.13.0",
@@ -34,6 +35,7 @@
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-calendar": "^4.6.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^9.0.1",
